# raytracer

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  build.sh
.github/workflows/: build.yml
Scenes/: test.cfg
src/Math/Point3D/: Point3D.hh
src/Math/Vector3D/: Vector3D.cpp  Vector3D.hh
src/Parser/: Parser.cpp  Parser.hh
src/RayTracer/: Makefile  main.cpp
src/RayTracer/Math/Matrix/: Matrix.cpp  Matrix.hh
src/RayTracer/Math/Point3D/: Point3D.cpp  Point3D.hh
src/RayTracer/Math/Vector3D/: Vector3D.cpp  Vector3D.hh
src/RayTracer/RayTracer/Builders/: APrimitiveBuilder.hpp  IPrimitiveBuilder.hh
src/RayTracer/RayTracer/Builders/Director/: Director.hpp
src/RayTracer/RayTracer/Builders/Plane/: PlaneBuilder.cpp  PlaneBuilder.hh
src/RayTracer/RayTracer/Builders/Sphere/: SphereBuilder.cpp  SphereBuilder.hh
src/RayTracer/RayTracer/Camera/: Camera.cpp  Camera.hh
src/RayTracer/RayTracer/Camera/Screen/: Screen.cpp  Screen.hh
src/RayTracer/RayTracer/Core/: Core.cpp  Core.hh
src/RayTracer/RayTracer/Error/: Error.cpp  Error.hh
src/RayTracer/RayTracer/Factories/Primitives/: IPrimitiveFactory.hh  PrimitiveFactory.cpp  PrimitiveFactory.hh
src/RayTracer/RayTracer/GUI/: GUI.cpp  GUI.hh
src/RayTracer/RayTracer/Light/: Light.cpp  Light.hh
src/RayTracer/RayTracer/Primitives/: APrimitive.cpp  APrimitive.hh  IPrimitive.hh
src/RayTracer/RayTracer/Ray/: Ray.cpp  Ray.hh
src/RayTracer/RayTracer/Scene/: Scene.cpp  Scene.hh
src/RayTracer/RayTracer/Screen/: Screen.cpp
src/Shared/: Singleton.hpp  SingletonTest.cpp
(+10 files in other folders)
